--- a/Filing_Engine/Filing_Engine.csproj
+++ b/Filing_Engine/Filing_Engine.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Create\Directory.cs" />
     <Compile Include="Create\File.cs" />
     <Compile Include="Create\FileDirRequest.cs" />
+    <Compile Include="Modify\RelativiseUserPath.cs" />
     <Compile Include="Modify\RemoveContent.cs" />
     <Compile Include="Modify\AddContent.cs" />
     <Compile Include="Modify\ChangeDirectory.cs" />
