--- a/File_Adapter/File_Adapter.csproj
+++ b/File_Adapter/File_Adapter.csproj
@@ -34,7 +34,7 @@
       <HintPath>..\..\BHoM_Adapter\Build\Adapter_Engine.dll</HintPath>
     </Reference>
     <Reference Include="Adapter_oM">
-      <HintPath>..\..\BHoM_Adapter\Build\Adapter_oM.dll</HintPath>
+      <HintPath>C:\ProgramData\BHoM\Assemblies\Adapter_oM.dll</HintPath>
     </Reference>
     <Reference Include="BHoM">
       <SpecificVersion>False</SpecificVersion>
