--- a/Filing_Engine/Filing_Engine.csproj
+++ b/Filing_Engine/Filing_Engine.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{D0B2A7E0-1D68-42A6-B699-8BB648D50932}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BH.Engine.Filing</RootNamespace>
+    <RootNamespace>BH.Engine.Adapters.Filing</RootNamespace>
     <AssemblyName>Filing_Engine</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
