--- a/Filing_oM/Filing_oM.csproj
+++ b/Filing_oM/Filing_oM.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{D344DCF0-788D-4E0A-8596-70199A080619}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BH.oM.Filing</RootNamespace>
+    <RootNamespace>BH.oM.Adapters.Filing</RootNamespace>
     <AssemblyName>Filing_oM</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
