--- a/Filing_oM/Filing_oM.csproj
+++ b/Filing_oM/Filing_oM.csproj
@@ -69,11 +69,15 @@
     <Compile Include="Config\PushConfig.cs" />
     <Compile Include="Directory.cs" />
     <Compile Include="enums\Encodings.cs" />
-    <Compile Include="Interfaces\IInfo.cs" />
-    <Compile Include="Interfaces\IContent.cs" />
-    <Compile Include="Requests\Interfaces\IRemoveRequest.cs" />
-    <Compile Include="Requests\Interfaces\IFileRequest.cs" />
+    <Compile Include="Interfaces\IDirectory.cs" />
+    <Compile Include="Interfaces\IResource.cs" />
+    <Compile Include="Interfaces\IFile.cs" />
+    <Compile Include="Interfaces\IFileSystemInfo.cs" />
+    <Compile Include="Interfaces\IFileSystemContainer.cs" />
     <Compile Include="Requests\Interfaces\IFilingRequest.cs" />
+    <Compile Include="Requests\IRemoveRequest.cs" />
+    <Compile Include="Requests\Interfaces\IFileRequest.cs" />
+    <Compile Include="Requests\Interfaces\IResourceRequest.cs" />
     <Compile Include="Requests\Interfaces\IDirectoryRequest.cs" />
     <Compile Include="Requests\FileContentRequest.cs" />
     <Compile Include="Requests\DirectoryRequest.cs" />
