--- a/Filing_Engine/Filing_Engine.csproj
+++ b/Filing_Engine/Filing_Engine.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Modify\Rename.cs" />
     <Compile Include="Objects\EqualityComparers\PathComparer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Query\NestingDepth.cs" />
     <Compile Include="Query\PathCombine.cs" />
     <Compile Include="Query\IsExistingDir.cs" />
     <Compile Include="Query\IsExistingFile.cs" />
