--- a/Filing_oM/Filing_oM.csproj
+++ b/Filing_oM/Filing_oM.csproj
@@ -68,8 +68,11 @@
     <Compile Include="Config\RemoveConfig.cs" />
     <Compile Include="Config\PushConfig.cs" />
     <Compile Include="Directory.cs" />
+    <Compile Include="FSDirectory.cs" />
     <Compile Include="enums\Encodings.cs" />
+    <Compile Include="File.cs" />
     <Compile Include="Interfaces\IDirectory.cs" />
+    <Compile Include="Interfaces\ILocatableResource.cs" />
     <Compile Include="Interfaces\IResource.cs" />
     <Compile Include="Interfaces\IFile.cs" />
     <Compile Include="Interfaces\IFileSystemInfo.cs" />
@@ -84,7 +87,7 @@
     <Compile Include="Requests\FileRequest.cs" />
     <Compile Include="Requests\FileDirRequest.cs" />
     <Compile Include="enums\FileFormat.cs" />
-    <Compile Include="File.cs" />
+    <Compile Include="FSFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
