--- a/Filing_Adapter/Filing_Adapter.csproj
+++ b/Filing_Adapter/Filing_Adapter.csproj
@@ -93,7 +93,9 @@
       <HintPath>..\packages\System.Memory.4.5.4\lib\net461\System.Memory.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="System.Numerics" />
+    <Reference Include="System.Numerics">
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Numerics.Vectors, Version=4.1.4.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Numerics.Vectors.4.5.0\lib\net46\System.Numerics.Vectors.dll</HintPath>
       <Private>True</Private>
@@ -165,10 +167,11 @@
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>REM xcopy "$(TargetDir)$(TargetFileName).dll"  "C:\ProgramData\BHoM\Assemblies" /Y
+    <PostBuildEvent>xcopy "$(TargetDir)$(TargetFileName)"  "C:\ProgramData\BHoM\Assemblies" /Y
 
 xcopy "$(TargetDir)Microsoft.Bcl.AsyncInterfaces.dll"  "C:\ProgramData\BHoM\Assemblies" /Y
 xcopy "$(TargetDir)System.IO.Abstractions.dll"  "C:\ProgramData\BHoM\Assemblies" /Y
+xcopy "$(TargetDir)System.Numerics.dll"  "C:\ProgramData\BHoM\Assemblies" /Y
 xcopy "$(TargetDir)System.Numerics.Vectors.dll"  "C:\ProgramData\BHoM\Assemblies" /Y
 xcopy "$(TargetDir)System.Text.Encodings.Web.dll"  "C:\ProgramData\BHoM\Assemblies" /Y
 xcopy "$(TargetDir)System.Text.Json.dll"  "C:\ProgramData\BHoM\Assemblies" /Y</PostBuildEvent>
