--- a/Filing_Engine/Filing_Engine.csproj
+++ b/Filing_Engine/Filing_Engine.csproj
@@ -86,6 +86,8 @@
     <Compile Include="Modify\Rename.cs" />
     <Compile Include="Objects\EqualityComparers\PathComparer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Query\PointsToSingleFile.cs" />
+    <Compile Include="Query\TryGetRegex.cs" />
     <Compile Include="Query\SortOrder.cs" />
     <Compile Include="Query\NestingDepth.cs" />
     <Compile Include="Query\PathCombine.cs" />
