--- a/File_Engine/File_Engine.csproj
+++ b/File_Engine/File_Engine.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Modify\Rename.cs" />
     <Compile Include="Objects\EqualityComparers\PathComparer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Modify\ProcessFileDirRequest.cs" />
     <Compile Include="Query\TryGetRegex.cs" />
     <Compile Include="Query\SortOrder.cs" />
     <Compile Include="Query\NestingDepth.cs" />
