--- a/File_Adapter/File_Adapter.csproj
+++ b/File_Adapter/File_Adapter.csproj
@@ -144,6 +144,7 @@
     <Compile Include="AdapterActions\Push.cs" />
     <Compile Include="AdapterActions\Pull.cs" />
     <Compile Include="CRUD\Create\CreateDirectory.cs" />
+    <Compile Include="CRUD\Create\CreateDataset.cs" />
     <Compile Include="CRUD\Create\CreateJson.cs" />
     <Compile Include="CRUD\Create\Create.cs" />
     <Compile Include="CRUD\Delete\Delete.cs" />
